# fishplacefinder

./: pyproject.toml
core/: settings.py  urls.py
smartfishing/: admin.py  apps.py  forms.py  models.py  views.py
smartfishing/migrations/: 0001_initial.py  0002_remove_photos_point_remove_points_creator_and_more.py  0003_delete_equipment.py  0004_equipment.py  0005_rename_point_id_comment_point_and_more.py  0006_alter_point_coordinates.py  0007_alter_point_coordinates.py  0008_remove_point_coordinates.py  0009_point_coordinates.py
smartfishing/templates/registration/: login.html  sign_up.html
smartfishing/templates/smartfishing/: base.html  home.html  map.html
static/css/: home.css
static/map/js/: mapScript.js
